--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Food Recipe Finder</title>
   </head>
   <body>
     <div class="container mt-5 text-center">
